feat: fitur check in dan bypass checkin
